Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,27 +280,471 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731}]"
+       "[[{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}],\n",
+       " [{'City': 'Toronto',\n",
+       "   'Country': 'Canada',\n",
+       "   'Population': 2800000,\n",
+       "   'Area': 2731},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Marakesh',\n",
+       "   'Country': 'Morocco',\n",
+       "   'Population': 928850,\n",
+       "   'Area': 200},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Los Cabos',\n",
+       "   'Country': 'Mexico',\n",
+       "   'Population': 287651,\n",
+       "   'Area': 3750},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Archipelago Sea',\n",
+       "   'Country': 'Finland',\n",
+       "   'Population': 60000,\n",
+       "   'Area': 8300},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Salina Island',\n",
+       "   'Country': 'Italy',\n",
+       "   'Population': 4000,\n",
+       "   'Area': 27},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       "  {'City': 'Iguazu Falls',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 0,\n",
+       "   'Area': 672}]]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +752,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    x = cities[1]\n",
+    "    x = cities[1:12]\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
