--- a/index.ipynb
+++ b/index.ipynb
@@ -752,7 +752,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    x = cities[1:12]\n",
+    "    x = cities[0:12][]\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
