--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
     "    x = Population[0]\n",
-    "    city_populations.append(x)\n",
+    "    city_populations.append(city_pop)\n",
     "city_populations\n",
     "    "
    ]
