--- a/index.ipynb
+++ b/index.ipynb
@@ -298,8 +298,9 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
+    "    city_pop \n",
     "    x = Population[0]['Population']\n",
-    "    city_populations.append(city_po)\n",
+    "    city_populations.append()\n",
     "city_populations\n",
     "    "
    ]
