Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,11 @@
    ],
    "source": [
     "city_populations = []\n",
-    "\n",
+    "for city_pop in list(range(0 ,len(cities))):\n",
+    "    population = cities[0]['Population']\n",
+    "    x = str(f'{population}')\n",
+    "    city_populations.append(x)\n",
+    "city_populations\n",
     "    "
    ]
   },
