--- a/index.ipynb
+++ b/index.ipynb
@@ -298,6 +298,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
+    "    city\n",
     "    population = cities[0]\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
