--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    city_pop = cities[0]\n",
+    "    city_pop = cities[0][]\n",
     "    city_populations.append(city_pop)\n",
     "city_populations\n",
     "    "
