--- a/index.ipynb
+++ b/index.ipynb
@@ -280,63 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 2891000,\n",
-       "  'Area': 4758}]"
+       "[2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    city_pop = cities[0][]\n",
+    "    city_pop = cities[0]['Population']\n",
     "    city_populations.append(city_pop)\n",
     "city_populations\n",
     "    "
