Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,8 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    city_pop = cities[0]['Population']\n",
+    "    city_pop = \n",
+    "    cities[0]['Population']\n",
     "    city_populations.append(city_pop)\n",
     "city_populations\n",
     "    "
