--- a/index.ipynb
+++ b/index.ipynb
@@ -307,10 +307,11 @@
    ],
    "source": [
     "city_populations = []\n",
+    "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    city_pop += 1 \n",
     "    population = cities[0]['Population']\n",
-    "    city_populations.append(population)\n",
+    "    x = str(f'{population}')\n",
+    "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
    ]
