--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        " 2891000]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,8 +309,7 @@
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
-    "    x = str(f'{population}')\n",
-    "    city_populations.append(x)\n",
+    "    city_populations.append(population)\n",
     "city_populations\n",
     "    "
    ]
