--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = cities[0]['Population']\n",
+    "    population = cities[0]['Population'] + city\n",
     "    city_populations.append(population)\n",
     "city_populations\n",
     "    "
