--- a/index.ipynb
+++ b/index.ipynb
@@ -280,27 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000]"
+       " 2891001,\n",
+       " 2891002,\n",
+       " 2891003,\n",
+       " 2891004,\n",
+       " 2891005,\n",
+       " 2891006,\n",
+       " 2891007,\n",
+       " 2891008,\n",
+       " 2891009,\n",
+       " 2891010,\n",
+       " 2891011]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = cities[0]['Population'] + city\n",
+    "    population = cities[0]['Population']\n",
     "    city_populations.append(population)\n",
     "city_populations\n",
     "    "
