--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city_pop in list(range(0 ,len(cities))):\n",
+    "for city in city_pop:\n",
     "    population = cities[0]['Population']\n",
     "    city_populations.append(population)\n",
     "city_populations\n",
