Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,34 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-117-7308a20581e0>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-117-7308a20581e0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for list(range(0 ,len(cities))) in city_pop:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     ]
     }
    ],
    "source": [
     "city_populations = []\n",
-    "for city in city_pop:\n",
+    "for list(range(0 ,len(cities))) in city_pop:\n",
     "    population = cities[0]['Population']\n",
     "    city_populations.append(population)\n",
     "city_populations\n",
