--- a/index.ipynb
+++ b/index.ipynb
@@ -294,11 +294,11 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for list(range(0 ,len(cities))) in city_pop:\n",
+    "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
-    "    city_populations.append(population)\n",
-    "city_populations\n",
-    "    "
+    "    x = str(f'{population}')\n",
+    "    city_populations.append(x)\n",
+    "city_populations"
    ]
   },
   {
