--- a/index.ipynb
+++ b/index.ipynb
@@ -295,7 +295,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = cities[0]['Population']\n",
+    "    population = cityPo\n",
     "    city_populations.append(x)\n",
     "city_populations"
    ]
