--- a/index.ipynb
+++ b/index.ipynb
@@ -295,8 +295,8 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = cityPo\n",
-    "    city_populations.append(x)\n",
+    "    population = city_pop\n",
+    "    city_populations.append(population)\n",
     "city_populations"
    ]
   },
