--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = city_pop\n",
+    "    population = city_pop[cities]\n",
     "    city_populations.append(population)\n",
     "city_populations"
    ]
