--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = city_pop[cities][\"Population\"]\n",
-    "    city_populations.append(population)\n",
+    "    city_populati.append(population)\n",
     "city_populations"
    ]
   },
