--- a/index.ipynb
+++ b/index.ipynb
@@ -298,8 +298,8 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = city_pop[cities][\"Population\"]\n",
-    "    city_populati.append(population)\n",
+    "    population = cities[0]['Population']\n",
+    "    city_populations.append(x)\n",
     "city_populations"
    ]
   },
