--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
-    "    city_populations.append(x)\n",
+    "    city_pop.append(population)\n",
     "city_populations"
    ]
   },
