--- a/index.ipynb
+++ b/index.ipynb
@@ -298,8 +298,8 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    city = cities[0]['Population']\n",
-    "    city_population.append(population)\n",
+    "    city_pop = cities[0]['Population']\n",
+    "    city_population.append(city_po)\n",
     "city_populations"
    ]
   },
