--- a/index.ipynb
+++ b/index.ipynb
@@ -280,27 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000]"
+       "['2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000']"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,8 +308,9 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    city_pop = cities[0]['Population']\n",
-    "    city_populations.append(city_pop)\n",
+    "    population = cities[0]['Population']\n",
+    "    x = str(f'{population}')\n",
+    "    city_populations.append(x)\n",
     "city_populations"
    ]
   },
