--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
-    "    x = str(f'{population}')\n",
+    "     = str(f'{population}')\n",
     "    city_populations.append(x)\n",
     "city_populations"
    ]
