Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,27 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000',\n",
-       " '2891000']"
+       "[2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000,\n",
+       " 2891000]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,8 +309,7 @@
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
     "    population = cities[0]['Population']\n",
-    "     = str(f'{population}')\n",
-    "    city_populations.append(x)\n",
+    "    city_populations.append(population)\n",
     "city_populations"
    ]
   },
