--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "city_populations = []\n",
     "for city_pop in list(range(0 ,len(cities))):\n",
-    "    population = cities[0]['Population']\n",
+    "    population = cities[0][]city_po['Population']\n",
     "    city_populations.append(population)\n",
     "city_populations"
    ]
