--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -315,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2581000"
+       "0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
