--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city_space in cities "
+    "for city_space in cities:\n",
+    "    "
    ]
   },
   {
