--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city_space in list(:\n",
+    "for city_space in list(range(0, l:\n",
     "    "
    ]
   },
