Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
    "source": [
     "city_areas = []\n",
     "for city_space in list(range(0, len(cities))):\n",
-    "    area = cities[city_space]\n",
+    "    area = cities[city_space][]\n",
     "    "
    ]
   },
