Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,8 +461,8 @@
     "city_areas = []\n",
     "for city_space in list(range(0, len(cities))):\n",
     "    area = cities[city_space]['Area']\n",
-    "    city_area.append(area\n",
-    "                    )\n",
+    "    city_area.append(area)\n",
+    "city_areas\n",
     "    "
    ]
   },
