Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -454,14 +454,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for city_space in list(range(0, len(cities))):\n",
     "    area = cities[city_space]['Area']\n",
-    "    city_area.append(area)\n",
+    "    city_areas.append(area)\n",
     "city_areas\n",
     "    "
    ]
